# asteroids-arena

./: .clocignore  README.md
ats2/: default.nix  release.nix
ats2/asteroids/: .gitignore  Makefile  default.nix  main_dats.c
ats2/asteroids/src/: main.dats
ats2/compiler/: default.nix
c/: release.nix
c/asteroids/: .gitignore  Makefile  asteroids  default.nix  opt_run.sh  run.sh  time.sh
c/asteroids/include/asteroids/: error.h  events.h  player.h  position.h  render.h  rotation.h  sound.h  storage.h  v2.h  velocity.h  world.h
c/asteroids/include/asteroids/component/: asteroid.h  bullet.h  mass.h  player.h  position.h  radius.h  rotation.h  velocity.h
c/asteroids/include/asteroids/physics/: collision.h  movement.h
c/asteroids/include/asteroids/system/: collision.h  lifetime.h
c/asteroids/src/: asteroid.c  bullet.c  collision.c  error.c  events.c  lifetime.c  main.c  mass.c  movement.c  player.c  position.c  radius.c  render.c  rotation.c  sound.c  storage.c  v2.c  velocity.c  world.c
cpp/: default.nix  release.nix
cpp/asteroids/: .gitignore  Makefile  asteroids  callgrind.out.17741  default.nix  draw_compare.sh  fps.out_ffast_math_native  fps.out_math_errno  sw.cpp  valgrind.sh
cpp/asteroids/include/asteroids/: game.h  sound.h  v2.h  world.h
cpp/asteroids/src/: game.cpp  main.cpp  render.cpp  sound.cpp
cpp/pkgs/: entt.nix
d/: shell.nix
d/asteroids/: .gitignore  draw_fps.sh  draw_fps_all.sh  draw_fps_dmd.sh  draw_fps_ldc.sh  dub.json  dub.selections.json  ldc_pgo_phase1.sh  ldc_pgo_phase2.sh  profile.data  profile.raw  run.sh  run_opt_dmd.sh  run_opt_ldc.sh  stats.sh  time.sh  valgrind.sh
d/asteroids/source/: app.d
d/asteroids/source/asteroids/: entity.d  input.d  math.d  render.d  v2.d  world.d
d/asteroids/source/asteroids/component/: asteroid.d  audio.d  bullet.d  delta.d  meta.d  package.d  player.d  primitive.d  rand.d  size.d
d/asteroids/source/asteroids/storage/: entity.d  global.d  package.d  type.d  unique.d  vector.d
d/asteroids/source/asteroids/system/: asteroid.d  bullet.d  package.d  physics.d  player.d
d/decs/: .gitignore  dub.json
d/decs/source/decs/: entity.d  meta.d  package.d
d/decs/source/decs/component/: meta.d  package.d  primitive.d
d/decs/source/decs/storage/: entity.d  global.d  join.d  package.d  unique.d  vector.d
haskell/: .gitignore  README.md  cabal.project  draw_all.sh  draw_cloc.sh  draw_fps.sh  draw_memory.sh  release.nix  run.hs  run.sh  solver.nix  stats.sh  time.sh  watch.sh
haskell/asteroids/: README.md  asteroids.cabal
haskell/asteroids/app/: Main.hs
haskell/asteroids/src/Game/: Asteroids.hs
haskell/asteroids/src/Game/Asteroids/: Audio.hs  Mutable.hs  Render.hs  System.hs  Vector.hs  Window.hs  World.hs
haskell/asteroids/src/Game/Asteroids/Storage/: Judy.hs
haskell/asteroids/src/Game/Asteroids/World/: Asteroid.hs  Audio.hs  Bullet.hs  Event.hs  Mass.hs  Physics.hs  Player.hs  Position.hs  Render.hs  Rotation.hs  Size.hs  Timer.hs  Velocity.hs
haskell/grow-vector/: README.md  ghcid.sh  grow-vector.cabal
haskell/grow-vector/src/Data/Vector/Grow/: Unboxed.hs
haskell/grow-vector/test/Data/Vector/Grow/Unboxed/: Test.hs
haskell/kecsik/: CHANGELOG.md  LICENSE  README.md  kecsik.cabal
haskell/kecsik/src/: Kecsik.hs
haskell/kecsik/src/Kecsik/: Component.hs  Core.hs  Storage.hs  System.hs
haskell/kecsik/src/Kecsik/Component/: Entity.hs
haskell/kecsik/src/Kecsik/Core/: Component.hs  Entity.hs  Storage.hs  System.hs
haskell/kecsik/src/Kecsik/Storage/: Entity.hs  Global.hs  HashTable.hs  Tuple.hs  Unique.hs
haskell/kecsik/test/Kecsik/: Test.hs
haskell/plotting/: asteroids.cabal
haskell/plotting/app/: FPS.hs
nix/: cloc-overlay.nix  cloc.nix  haskell.nix  liquidhaskell.nix  pkgs.nix  project.nix  zig.nix
nix/dmd/: default.nix
nix/ldc/: generic.nix
nix/pkgs/: grow-vector.nix  judy.nix
ocaml/: .gitignore  asteroids.ml  deps.txt  draw_compare.sh  draw_fps.sh  dune  init.sh  run.sh  shell.nix
rust/: shell.nix
rust/asteroids/: .gitignore  Cargo.toml  draw_fps.sh  draw_specs_legion.sh  pgo_phase1.sh  pgo_phase2.sh  time.sh  valgrind.sh
rust/asteroids/msvc/lib/32/: SDL2.lib  SDL2_mixer.lib  SDL2main.lib  SDL2test.lib
rust/asteroids/msvc/lib/64/: SDL2_mixer.lib
rust/asteroids/src/: main.rs
rust/asteroids/src/asteroids/: mod.rs  render.rs  stringify.rs  world.rs
rust/asteroids/src/asteroids/components/: asteroid.rs  audio.rs  bullet.rs  mass.rs  mod.rs  player.rs  pos.rs  rot.rs  size.rs  time.rs  vel.rs
rust/asteroids/src/asteroids/systems/: asteroid.rs  audio.rs  bullet.rs  mod.rs  physics.rs  player.rs  render.rs
zig/: shell.nix
zig/asteroids/: .gitignore  README.md  build.zig  draw_fps.sh  run.sh  run_release.sh  time.sh  valgrind.sh
zig/asteroids/include/: sincos.h
zig/asteroids/src/: component.zig  entity.zig  input.zig  main.zig  math.zig  render.zig  sdl.zig  storage.zig  v2.zig  world.zig
zig/asteroids/src/component/: asteroid.zig  bullet.zig  player.zig  size.zig  sound.zig
zig/asteroids/src/components/: mass.zig  position.zig  velocity.zig
zig/asteroids/src/storage/: global.zig  unique.zig  vector.zig
zig/asteroids/src/system/: bullet.zig  physics.zig  player.zig
