name:                asteroids
version:             0.1.0.0
synopsis:            Implementation of retro asteroids game.
description:
  Basic implementation of asteroids game for benchmarks and showcase.
  .
  * Rendering is SDL based.
  * Apecs for entity component system.
  * Benchmarks of TPS (tick per second).
  .
  See README.md
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Game
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/NCrashed/asteroids-arena(haskell/asteroids)

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Asteroids
    Game.Asteroids.World
    Game.Asteroids.World.Mass
    Game.Asteroids.World.Position
    Game.Asteroids.World.Velocity
    Game.Asteroids.World.Render
    Game.Asteroids.Render
    Game.Asteroids.Window
  build-depends:
      base            >= 4.5      && < 4.14
    , apecs           >= 0.9      && < 0.10
    , linear          >= 1.20     && < 1.21
    , sdl2            >= 2.5      && < 2.6
    , stm             >= 2.5      && < 2.6
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators

executable asteroids
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , asteroids
  default-language:    Haskell2010
