name:                asteroids
version:             0.1.0.0
synopsis:            Implementation of retro asteroids game.
description:
  Basic implementation of asteroids game for benchmarks and showcase.
  .
  * Rendering is SDL based.
  * Apecs for entity component system.
  * Benchmarks of TPS (tick per second).
  .
  See README.md
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Game
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
data-files:
  sounds/*.wav

source-repository head
  type: git
  location: https://github.com/NCrashed/asteroids-arena(haskell/asteroids)

flag liquidhaskell
  default: False
  manual: True
  description: Use liquid haskell to check sources

library
  hs-source-dirs:      src
  other-modules:
    Paths_asteroids
  exposed-modules:
    Game.Asteroids
    Game.Asteroids.Audio
    Game.Asteroids.Mutable
    Game.Asteroids.Render
    Game.Asteroids.System
    Game.Asteroids.Vector
    Game.Asteroids.Window
    Game.Asteroids.World
    Game.Asteroids.World.Asteroid
    Game.Asteroids.World.Audio
    Game.Asteroids.World.Bullet
    Game.Asteroids.World.Event
    Game.Asteroids.World.Mass
    Game.Asteroids.World.Physics
    Game.Asteroids.World.Player
    Game.Asteroids.World.Position
    Game.Asteroids.World.Render
    Game.Asteroids.World.Rotation
    Game.Asteroids.World.Size
    Game.Asteroids.World.Timer
    Game.Asteroids.World.Velocity
  build-depends:
      clock           >= 0.8      && < 0.9
    , apecs
    , data-default
    , linear          >= 1.20     && < 1.22
    , mutable         >= 0.2      && < 0.3
    , random          >= 1.0      && < 1.2
    , sdl2            >= 2.5      && < 2.6
    , sdl2-mixer      >= 1.1      && < 1.2
    , stm             >= 2.5      && < 2.6

  if flag(liquidhaskell)
    ghc-options: -fplugin=LiquidHaskell
    build-depends:
        liquid-base
      , liquid-vector
      , liquid-containers
      , liquidhaskell >= 0.8.10
  else
    build-depends:
        base          >= 4.5      && < 4.15
      , vector        >= 0.12     && < 0.13
      , containers    >= 0.6      && < 0.7
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

executable asteroids
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , asteroids
  default-language:    Haskell2010
