name:                kecsik
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Game
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/NCrashed/asteroids-arena(haskell/sobolecs)

flag liquidhaskell
  default: True
  manual: True
  description: Use liquid haskell to check sources

library
  hs-source-dirs:      src
  exposed-modules:
    Kecsik
    Kecsik.Component
    Kecsik.Component.Entity
    Kecsik.Core
    Kecsik.Storage
    Kecsik.Storage.Global
    Kecsik.Storage.HashTable
    Kecsik.Storage.Tuple
    Kecsik.System
  build-depends:
      stm                 >= 2.5      && < 2.6
    , bytestring          >= 0.10     && < 0.11
    , data-default        >= 0.7      && < 0.8
    , data-default-class  >= 0.1      && < 0.2
    , grow-vector         >= 0.1      && < 0.2
    , hashable            >= 1.3      && < 1.4
    , hashtables          >= 1.2      && < 1.5
    , memory              >= 0.10     && < 0.16
    , mtl                 >= 2.2      && < 2.3
    , mutable             >= 0.2      && < 0.3
    , primitive           >= 0.7      && < 0.8
    , transformers        >= 0.5      && < 0.6
    , vector-th-unbox     >= 0.2      && < 0.3

  if flag(liquidhaskell)
    ghc-options: -fplugin=LiquidHaskell
    build-depends:
        liquid-base
      , liquid-vector
      , liquid-containers
      , liquidhaskell >= 0.8.10
  else
    build-depends:
        base          >= 4.5      && < 4.15
      , vector        >= 0.12     && < 0.13
      , containers    >= 0.6      && < 0.7
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

test-suite kecsik-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Kecsik.Test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
  build-depends:
      base
    , kecsik
    , quickcheck-instances
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-quickcheck
