name:                plotting
version:             0.1.0.0
synopsis:            Small plotting utils for calculating stats about implemented games
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24

executable calc-fps
  hs-source-dirs:      app
  main-is:             FPS.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , Chart
    , Chart-cairo
    , time
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
