[package]
name = "asteroids"
version = "0.2.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

[target.'cfg(windows)'.package]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "^0.11"
crossbeam = "^0.8"
rand = "^0.7"

[dependencies.sdl2]
version = "^0.34"
default-features = false
features = ["mixer"]

[dependencies.legion]
version = "^0.3.1"
default-features = false
features = ["codegen"]
